# Webserv

./: Makefile  Parser.cpp  TODO.md  Webserv  cgi_output.txt  chunk.txt  chunkedTest.py  file.txt  file2.txt  request.sh  steps.md  stress.py
container/: Makefile  dockerfile
container/scripts/: interpoint.sh
resources/: http.md
src/: Server.conf  a.out  main.cpp
src/config/: Config.cpp  Config.hpp
src/http/: Cgi.cpp  Cgi.hpp  HttpParser.cpp  HttpParser.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  ServerUtils.cpp  ServerUtils.hpp  Socket.cpp  Socket.hpp
src/log/: Logger.cpp  Logger.hpp
src/server/: .Server.cpp.swp  Server.cpp  Server.hpp
src/utils/: MyType.hpp
src/www/test/: index.html
tests/: CMakeLists.txt  Test.cpp
www/: 404.html  500.html  index.html  test.php
